--- a/michael/jordan.html
+++ b/michael/jordan.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="top-nav">
+		<img src="static/Img/img-2.jpg">
 		<ul>
 			<a href="index.html"><li>Home</li></a>
 			<a href="nike.html"><li>Nike</li></a>
