--- a/michael/adidas.html
+++ b/michael/adidas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="top-nav">
+		<img src="static/Img/img-3.jpg">
 		<ul>
 			<a href="index.html"><li>Home</li></a>
 			<a href="nike.html"><li>Nike</li></a>
@@ -14,10 +15,12 @@
 			<a href="adidas.html"><li>Adidas</li></a>
 		</ul>
 	</div>
-	<div class="content4">
+	<div class="content">
+		<div class="img-holder_2">
 			<div class="layer">
 				<h1 id= "myElement">Adidas News</h1>
 			</div>
+		</div>
 	</div>
 	<div class="footer">
 	</div>
