--- a/michael/index.html
+++ b/michael/index.html
@@ -3,7 +3,40 @@
 <head>
 	<title>Sneaker Daily</title>
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
-	<script type="text/javascript" src="static/js/jquery-2.1.3.min.js"></script> 
+	<script type="text/javascript" src="static/js/jquery-2.1.3.min.js"></script>
+   <script language="JavaScript1.1">
+<!--
+
+/*
+JavaScript Image slideshow:
+By JavaScript Kit (www.javascriptkit.com)
+Over 200+ free JavaScript here!
+*/
+
+var slideimages=new Array()
+var slidelinks=new Array()
+function slideshowimages(){
+for (i=0;i<slideshowimages.arguments.length;i++){
+slideimages[i]=new Image()
+slideimages[i].src=slideshowimages.arguments[i]
+}
+}
+
+function slideshowlinks(){
+for (i=0;i<slideshowlinks.arguments.length;i++)
+slidelinks[i]=slideshowlinks.arguments[i]
+}
+
+function gotoshow(){
+if (!window.winslide||winslide.closed)
+winslide=window.open(slidelinks[whichlink])
+else
+winslide.location=slidelinks[whichlink]
+winslide.focus()
+}
+
+//-->
+</script>
 </head>
 <body>
 	<div class="top-nav">
@@ -14,14 +47,47 @@
 			<a href="adidas.html"><li>Adidas</li></a>
 		</ul>
 	</div>
-	<div class="content">
+	<div class="add-space">
+      <img src="static/Img/bk.jpg">
+   </div>
+   <div class="content">
 		<div class="img-holder_4">
-		<img src="static/Img/adidas-logo.jpg">
 			<div class="layer">
 				<h1 id= "myElement">Welcome to Kicks Daily</h1>
 			</div>
 		</div>
 	</div>
+   <a href="javascript:gotoshow()"><img src="img1.jpg" name="slide" border=0 width=300 height=375></a>
+<script>
+<!--
+
+//configure the paths of the images, plus corresponding target links
+slideshowimages("static/img/img1.jpg","static/jpg/img2.jpg","static/img/img3.jpg","static/img/img4.jpg","static/img/img5.jpg")
+slideshowlinks("http://www.kicksonfire.com/2015/05/11/nba-kicks-my-nephew-loses-his-mind-over-lebron-james-game-winner-and-nike-lebron-12-pe/id","http://www.kicksonfire.com/2015/05/11/10-recent-kicks-that-i-missed-the-hype-train-forid=10092","http://www.kicksonfire.com/2015/05/10/10-kicks-that-pay-tribute-to-motherly-figures-is-that-cool-for-mothers-day","http://www.kicksonfire.com/2015/05/11/a-simple-and-classic-nike-air-trainer-3-in-wolf-grey","http://www.kicksonfire.com/2015/05/11/is-this-our-first-look-at-the-nike-kd-8")
+
+//configure the speed of the slideshow, in miliseconds
+var slideshowspeed=2000
+
+var whichlink=0
+var whichimage=0
+function slideit(){
+if (!document.images)
+return
+document.images.slide.src=slideimages[whichimage].src
+whichlink=whichimage
+if (whichimage<slideimages.length-1)
+whichimage++
+else
+whichimage=0
+setTimeout("slideit()",slideshowspeed)
+}
+slideit()
+
+//-->
+</script>
+<p align="center"><font face="arial" size="-2">This free script provided by</font><br>
+<font face="arial, helvetica" size="-2"><a href="http://javascriptkit.com">JavaScript
+Kit</a></font></p>
 	<div class="footer">
 	</div>
 </body>
