--- a/michael/nike.html
+++ b/michael/nike.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="top-nav">
+		<img src="static/Img/img-1.png">
 		<ul>
 			<a href="index.html"><li>Home</li></a>
 			<a href="nike.html"><li>Nike</li></a>
