--- a/michael/index.html
+++ b/michael/index.html
@@ -2,94 +2,163 @@
 <html>
 <head>
 	<title>Sneaker Daily</title>
-	<link rel="stylesheet" type="text/css" href="static/css/style.css">
-	<script type="text/javascript" src="static/js/jquery-2.1.3.min.js"></script>
-   <script language="JavaScript1.1">
-<!--
+		<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-/*
-JavaScript Image slideshow:
-By JavaScript Kit (www.javascriptkit.com)
-Over 200+ free JavaScript here!
-*/
-
-var slideimages=new Array()
-var slidelinks=new Array()
-function slideshowimages(){
-for (i=0;i<slideshowimages.arguments.length;i++){
-slideimages[i]=new Image()
-slideimages[i].src=slideshowimages.arguments[i]
-}
-}
-
-function slideshowlinks(){
-for (i=0;i<slideshowlinks.arguments.length;i++)
-slidelinks[i]=slideshowlinks.arguments[i]
-}
-
-function gotoshow(){
-if (!window.winslide||winslide.closed)
-winslide=window.open(slidelinks[whichlink])
-else
-winslide.location=slidelinks[whichlink]
-winslide.focus()
-}
-
-//-->
-</script>
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+<link rel="stylesheet" type="text/css" href="static/css/style.css">
+<!-- Latest compiled and minified JavaScript -->
+<script type="text/javascript" src="static/js/jquery-2.1.3.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> 
+<style>
+	#topImg {
+		height: 50px;
+		width: 100px;
+		float: left;
+	}
+	h1 {
+		text-align: center;
+	}
+</style>
 </head>
 <body>
-	<div class="top-nav">
-		<ul>
-			<a href="index.html"><li>Home</li></a>
-			<a href="nike.html"><li>Nike</li></a>
-			<a href="jordan.html"><li>Jordan</li></a>
-			<a href="adidas.html"><li>Adidas</li></a>
-		</ul>
-	</div>
-	<div class="add-space">
-      <img src="static/Img/bk.jpg">
-   </div>
-   <div class="content">
-		<div class="img-holder_4">
-			<div class="layer">
-				<h1 id= "myElement">Welcome to Kicks Daily</h1>
-			</div>
+	  <div class="navbar navbar-default">
+	    <img src="static/img/bk.jpg" alt="bk" id="topImg">
+	    <div class="nav navbar-nav navbar-right">
+			<form class="form-inline">
+			  <div class="form-group">
+			    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+			    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
+			  </div>
+			  <div class="form-group">
+			    <label class="sr-only" for="exampleInputPassword3">Password</label>
+			    <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
+			  </div>
+			  <div class="checkbox">
+			    <label>
+			      <input type="checkbox"> Remember me
+			    </label>
+			  </div>
+			  <button type="submit" class="btn btn-default">Sign in</button>
+			</form>
+	      </div>
+	   </div>
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="index.html">KicksMixx </a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="#">Customize <span class="sr-only">(current)</span></a></li>
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="nike.html">Nike</a></li>
+	            <li><a href="adidas.html">Adidas</a></li>
+	            <li><a href="jordan.html">Jordan</a></li>
+	            <li><a href="Etc..html">Etc.</a></li>
+	          </ul>
+	        </li>
+	      </ul>
+	      <form class="navbar-form navbar-left" role="search">
+	        <div class="form-group">
+	          <input type="text" class="form-control" placeholder="Search">
+	        </div>
+	        <button type="submit" class="btn btn-default">Submit</button>
+	      </form>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+ <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Sneaker News</h1>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#myCarousel" data-slide-to="1"></li>
+		    <li data-target="#myCarousel" data-slide-to="2"></li>
+		    <li data-target="#myCarousel" data-slide-to="3"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		     <img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		      <<img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		      <img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+		  </div>
+
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
 		</div>
-	</div>
-   <a href="javascript:gotoshow()"><img src="img1.jpg" name="slide" border=0 width=300 height=375></a>
-<script>
-<!--
+      </div>
+    </div>
 
-//configure the paths of the images, plus corresponding target links
-slideshowimages("static/img/img1.jpg","static/jpg/img2.jpg","static/img/img3.jpg","static/img/img4.jpg","static/img/img5.jpg")
-slideshowlinks("http://www.kicksonfire.com/2015/05/11/nba-kicks-my-nephew-loses-his-mind-over-lebron-james-game-winner-and-nike-lebron-12-pe/id","http://www.kicksonfire.com/2015/05/11/10-recent-kicks-that-i-missed-the-hype-train-forid=10092","http://www.kicksonfire.com/2015/05/10/10-kicks-that-pay-tribute-to-motherly-figures-is-that-cool-for-mothers-day","http://www.kicksonfire.com/2015/05/11/a-simple-and-classic-nike-air-trainer-3-in-wolf-grey","http://www.kicksonfire.com/2015/05/11/is-this-our-first-look-at-the-nike-kd-8")
+      <hr>
 
-//configure the speed of the slideshow, in miliseconds
-var slideshowspeed=2000
+      <footer>
+        <p>&copy; Company 2014</p>
+      </footer>
+    </div> <!-- /container -->
 
-var whichlink=0
-var whichimage=0
-function slideit(){
-if (!document.images)
-return
-document.images.slide.src=slideimages[whichimage].src
-whichlink=whichimage
-if (whichimage<slideimages.length-1)
-whichimage++
-else
-whichimage=0
-setTimeout("slideit()",slideshowspeed)
-}
-slideit()
 
-//-->
-</script>
-<p align="center"><font face="arial" size="-2">This free script provided by</font><br>
-<font face="arial, helvetica" size="-2"><a href="http://javascriptkit.com">JavaScript
-Kit</a></font></p>
-	<div class="footer">
-	</div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
+
 </body>
 <script type="text/javascript" src="static/js/code.js"></script>
 </html>
