--- a/michael/jordan.html
+++ b/michael/jordan.html
@@ -2,28 +2,160 @@
 <html>
 <head>
 	<title>Sneaker Daily</title>
-	<link rel="stylesheet" type="text/css" href="static/css/style.css">
-	<script type="text/javascript" src="static/js/jquery-2.1.3.min.js"></script> 
-</head>
+		<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/boo	tstrap-theme.min.css">
+<link rel="stylesheet" type="text/css" href="static/css/style.css">
+<!-- Latest compiled and minified JavaScript -->
+<script type="text/javascript" src="static/js/jquery-2.1.3.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> 
+<style>
+	#topImg {
+		height: 50px;
+		width: 100px;
+		float: left;
+	}
+	h1 {
+		text-align: center;
+	}
+</style>
+</head>    
 <body>
-	<div class="top-nav">
-		<img src="static/Img/img-2.jpg">
-		<ul>
-			<a href="index.html"><li>Home</li></a>
-			<a href="nike.html"><li>Nike</li></a>
-			<a href="jordan.html"><li>Jordan</li></a>
-			<a href="adidas.html"><li>Adidas</li></a>
-		</ul>
-	</div>
-	<div class="content">
-		<div class="img-holder">
-			<div class="layer">
-				<h1 id= "myElement">Jordan News</h1>
-			</div>
+ <div class="navbar navbar-default">
+	    <img src="static/img/bk.jpg" alt="bk" id="topImg">
+	    <div class="nav navbar-nav navbar-right">
+			<form class="form-inline">
+			  <div class="form-group">
+			    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+			    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
+			  </div>
+			  <div class="form-group">
+			    <label class="sr-only" for="exampleInputPassword3">Password</label>
+			    <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
+			  </div>
+			  <div class="checkbox">
+			    <label>
+			      <input type="checkbox"> Remember me
+			    </label>
+			  </div>
+			  <button type="submit" class="btn btn-default">Sign in</button>
+			</form>
+	      </div>
+	   </div>
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="index.html">KicksMixx </a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="#">Customize <span class="sr-only">(current)</span></a></li>
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="nike.html">Nike</a></li>
+	            <li><a href="adidas.html">Adidas</a></li>
+	            <li><a href="jordan.html">Jordan</a></li>
+	            <li><a href="Etc..html">Etc.</a></li>
+	          </ul>
+	        </li>
+	      </ul>
+	      <form class="navbar-form navbar-left" role="search">
+	        <div class="form-group">
+	          <input type="text" class="form-control" placeholder="Search">
+	        </div>
+	        <button type="submit" class="btn btn-default">Submit</button>
+	      </form>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+ <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Jordan News</h1>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#myCarousel" data-slide-to="1"></li>
+		    <li data-target="#myCarousel" data-slide-to="2"></li>
+		    <li data-target="#myCarousel" data-slide-to="3"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		     <img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		      <<img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		      <img src="static/img/bk.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      </div>
+		    </div>
+		  </div>
+
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
 		</div>
-	</div>
-	<div class="footer">
-	</div>
+      </div>
+    </div>
+      
+      <hr>
+
+      <footer>
+        <p>&copy; KicksMixx 2014</p>
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 <script type="text/javascript" src="static/js/code.js"></script>
 </html>
