--- a/michael/index.html
+++ b/michael/index.html
@@ -13,12 +13,24 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> 
 <style>
 	#topImg {
-		height: 50px;
+		height: 80px;
 		width: 100px;
 		float: left;
 	}
 	h1 {
 		text-align: center;
+		font-size: 60px;
+		font-weight: bold;
+		font-family: "Times New Roman", Georgia, Serif;
+	}
+	#slider {
+		margin-right: 30%;
+
+	}
+	p {
+		color: white;
+		text-shadow: 2px 2px black;
+		font-size: 5px;
 	}
 </style>
 </head>
@@ -44,7 +56,7 @@
 			</form>
 	      </div>
 	   </div>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-inverse">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -54,24 +66,21 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="index.html">KicksMixx </a>
+	      <a class="navbar-brand">Pick Your Kicks</a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="#">Customize <span class="sr-only">(current)</span></a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
+	       		<li><a href="index.html">Home</a></li>
 	            <li><a href="nike.html">Nike</a></li>
 	            <li><a href="adidas.html">Adidas</a></li>
 	            <li><a href="jordan.html">Jordan</a></li>
-	            <li><a href="Etc..html">Etc.</a></li>
 	          </ul>
 	        </li>
 	      </ul>
-	      <form class="navbar-form navbar-left" role="search">
+	      <form class="navbar-form navbar-left" role="search" id="search">
 	        <div class="form-group">
 	          <input type="text" class="form-control" placeholder="Search">
 	        </div>
@@ -81,9 +90,9 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
  <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <h1>Sneaker News</h1>
+    <div class="jumbotron" id="slider">
       <div class="container">
-        <h1>Sneaker News</h1>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
 		  <!-- Indicators -->
 		  <ol class="carousel-indicators">
@@ -96,34 +105,38 @@
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner" role="listbox">
 		    <div class="item active">
-		      <img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/nike1.jpg" alt="bk" align="center">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">Nike Air Trainer 1 Mid QS</p>
+		      <p>Puerto Rico Release June 14th, 2015 @ Nike.com & Kasina June 14th is celebrated the Puerto Rican Day in New York City. Especially for this day, Nike Sportswear has designed a Nike Air Trainer 1, which will be released as...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/nike-air-trainer-1-mid-qs-puerto-rico-images/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		     <img src="static/img/bk.jpg" alt="bk">
+		     <img src="static/img/adidas2.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">UNDFT X ADIDAS ORIGINALS LOS ANGELES</p>
+		      <p>Adidas unveils it’s latest lifestyle silhouette with a big bang – the Los Angeles, a updated variant of the classic LA Trainer style is already available at adidas retailers, but something special is about to be released very soon. Adidas Consortium teamed up with LA based...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/undft-x-adidas-originals-los-angeles/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		      <<img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/nike2.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">FAMILIA SKATESHOP X NIKE DUNK HIGH PRO SB – BLUE OX IMAGES</p>
+		      <p>Familia Skateshop x Nike Dunk High Pro SB - Blue Ox Release June 27th, 2015 @ Familia Probably only in the US, this Nike Dunk High Pro SB will be released on June 27th, 2015. It's a collaboration from Nike Skateboarding with Minneapolis-based skate shop Familia for...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/familia-skate-shop-x-nike-dunk-high-pro-sb-blue-ox-images/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		      <img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/vans1.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">VANS X DISNEY “YOUNG AT HEART” COLLECTION 2015</p>
+		      <p>Vans x Disney "Young At Heart" Collection 2015 Released @ Vans.com & SNIPES Not for the first time these two California based giants teamed up to create a capsule collektion. In 2015 they designed shoes, apparel and accessories with the most beloved Disney characters, Mickey Mouse, Minnie...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/vans-x-disney-young-at-heart-collection-2015/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 		  </div>
