--- a/michael/index.html
+++ b/michael/index.html
@@ -11,30 +11,6 @@
 <!-- Latest compiled and minified JavaScript -->
 <script type="text/javascript" src="static/js/jquery-2.1.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> 
-<style>
-	#topImg {
-		height: 80px;
-		width: 100px;
-		float: left;
-		padding: 3px;
-	}
-	h1 {
-		text-align: center;
-		font-size: 60px;
-		font-weight: bold;
-		font-family: "Times New Roman", Georgia, Serif;
-		text-shadow: 3px 3px #9e9e9e;
-	}
-	#slider {
-		margin-right: 35%;
-		margin-left: 2%;
-	}
-	p {
-		color: white;
-		text-shadow: 2px 2px black;
-		font-size: 5px;
-	}
-</style>
 </head>
 <body>
 	  <div class="navbar navbar-default">
@@ -109,13 +85,13 @@
 		    <div class="item active">
 		      <img src="static/img/nike1.jpg" alt="bk" align="center">
 		      <div class="carousel-caption">
-		      <p align="center">Nike Air Trainer 1 Mid QS</p>
+		      <h6 align="center">Nike Air Trainer 1 Mid QS</h4>
 		      <p>Puerto Rico Release June 14th, 2015 @ Nike.com & Kasina June 14th is celebrated the Puerto Rican Day in New York City. Especially for this day, Nike Sportswear has designed a Nike Air Trainer 1, which will be released as...</p>
 		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/nike-air-trainer-1-mid-qs-puerto-rico-images/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
-		    <div class="item">
+		    <div class="item" id="content">
 		     <img src="static/img/adidas2.jpg" alt="bk">
 		      <div class="carousel-caption">
 		      <p align="center">UNDFT X ADIDAS ORIGINALS LOS ANGELES</p>
