--- a/michael/custom.html
+++ b/michael/custom.html
@@ -67,10 +67,17 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
- <!-- Main jumbotron for a primary marketing message or call to action -->
     <h1>Customize!</h1>
-    
-    
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-6">
+            Container Left
+        </div>
+        <div class="col-lg-6">
+            Container Right
+        </div>
+    </div>
+</div>
       <hr>
 
       <footer>
