--- a/michael/index.html
+++ b/michael/index.html
@@ -67,9 +67,11 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
- <!-- Main jumbotron for a primary marketing message or call to action -->
     <h1>Sneaker News</h1>
-    <div class="jumbotron" id="slider">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-6">
+      <div class="jumbotron" id="slider">
       <div class="container">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
 		  <!-- Indicators -->
@@ -130,8 +132,78 @@
 		  </a>
 		</div>
       </div>
-    </div>
+</div>
 
+
+        </div>
+        <div class="col-lg-6">
+	    <h2>Release Dates</h2>
+	    <div class="mygrid-wrapper-div">
+	    	<p id="rell">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	    </div>
+	    	    <h2>Custom Feed</h2>
+	    <div class="jumbotron" id="slider2">
+      	<div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#myCarousel" data-slide-to="1"></li>
+		    <li data-target="#myCarousel" data-slide-to="2"></li>
+		    <li data-target="#myCarousel" data-slide-to="3"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <img src="static/img/nike1.jpg" alt="bk" align="center">
+		      <div class="carousel-caption">
+		      <h6 align="center">Nike Air Trainer 1 Mid QS</h4>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/nike-air-trainer-1-mid-qs-puerto-rico-images/" role="button" target="_blank">Read More &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item" id="content">
+		     <img src="static/img/adidas2.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p align="center">UNDFT X ADIDAS ORIGINALS LOS ANGELES</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/undft-x-adidas-originals-los-angeles/" role="button" target="_blank">Read More &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		      <img src="static/img/nike2.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p align="center">FAMILIA SKATESHOP X NIKE DUNK HIGH PRO SB – BLUE OX IMAGES</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/familia-skate-shop-x-nike-dunk-high-pro-sb-blue-ox-images/" role="button" target="_blank">Read More &raquo;</a></p>
+		      </div>
+		    </div>
+
+		    <div class="item">
+		      <img src="static/img/vans1.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p align="center">VANS X DISNEY “YOUNG AT HEART” COLLECTION 2015</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/vans-x-disney-young-at-heart-collection-2015/" role="button" target="_blank">Read More &raquo;</a></p>
+		      </div>
+		    </div>
+		  </div>
+
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+      </div>
+</div>
+    </div>
+        </div>
+    </div>
+</div>
       <hr>
 
       <footer>
