--- a/michael/index.html
+++ b/michael/index.html
@@ -70,7 +70,7 @@
     <h1>Sneaker News</h1>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-9" style="padding:0;">
       <div class="jumbotron" id="slider">
       <div class="container">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -136,10 +136,77 @@
 
 
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-3"style="padding:2;margin-left: -50px;">
 	    <h2>Release Dates</h2>
 	    <div class="mygrid-wrapper-div">
-	    	<p id="rell">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	    	<p id="rell">
+	    	J U N E
+	    	<br>24 - Spizike - Wh/Poison/Red
+	    	<br>27 - Nike Kyrie 1 - USA
+	    	<br>27 - Nike KD 8 - USA
+	    	<br>27 - Retro 1 - 'Shattered Glass'
+	    	<br>
+	    	<br>J U L Y
+			<br>1 - Nike Foamposite - Grey
+			<br>1 - Flex Trainer 2 - Multiple
+			<br>1 - Nike Hyperdunk '15 - Crimson
+			<br>3 - UA Curry 1 Low - Multiple
+			<br>4 - Retro 6 Low - Wh/Infrared/Blk
+			<br>10 - Nike Penny 6 - Black/Copper
+			<br>11 - 11Lab4 - Red
+			<br>11 - Nike KD 8 - Bright Crimson
+			<br>11 - GIRLS Retro 7 - Hot Lava
+			<br>17 - UA Curry 1 Low - Orange/Grn
+			<br>18 - Retro 7 - Bordeaux
+			<br>22 - Son of Mars - Wh/Blk/Grey
+			<br>25 - AJ 1.5 - Red/Black/White
+			<br>? - Retro 1 Rare Air - Black
+			<br>A U G U S T
+			<br>1 - Retro 11 IE Low - White/Grey
+			<br>1 - Nike Hyperdunk '15 - White
+			<br>8 - AJ1 KO High - Black/Red
+			<br>15 - Retro 7 - Marvin the Martian
+			<br>22 - Retro 6 Low  - Black/Chrome
+			<br>? - Retro 9  - Statue Green
+			S E P T E M B E R
+			12 - Retro 9 - Anthracite
+			19 - Retro 6 Low - W/Green/Blue
+			? - Retro 1 Rare Air - Grey
+			O C T O B E R
+			3 - Retro 14 Low - Royal
+			24 - Retro 8 - 3-peat
+			31 - Retro 1 OG - Wh/Univ. Blue
+			? - Retro 1 Low OG - Black/Roya
+			N O V E M B E R
+			14 - Retro 7 - Sweater/Shirt
+			27 - Retro 8 - Black/Aqua
+
+			D E C E M B E R
+			12 - Retro 8 - Black/Chrome
+			19 - Retro 11 - Black (72-10)
+			? - Retro 1 Low OG - Black/Grey
+
+			2015 (Unknown)
+			? - Retro XX3 - Red
+			? - Nike Foamposite - Sharpie
+			? - Spizike - Turquoise/Navy
+			? - 3Lab4 - Black
+			? - Future Low - Various
+			? - Future Low - Green Camo
+			? - Future Low - Red Camo
+			? - Retro 2 x Just Don - Grey
+			? - Super Fly 4 - Red
+
+			2016 Spring
+			? - Retro 1 - White/Blue
+			? - Retro 2 - Black/Red
+			? - Retro 2 - 'Wing It'
+			? - Retro 4 - Navy/Yellow
+			? - Retro 4 - White/Red
+			? - Retro 5 Low - Black/Red
+			? - Retro 5 Low - White/Navy
+			? - Retro 12 - Black
+	    	</p>
 	    </div>
 	    	    <h2>Custom Feed</h2>
 	    <div class="jumbotron" id="slider2">
@@ -220,9 +287,4 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
-</html>
-
->>>>>>> origin/master
-</body>
-<script type="text/javascript" src="static/js/code.js"></script>
 </html>
