--- a/michael/Etc..html
+++ b/michael/Etc..html
@@ -17,7 +17,7 @@
 <!-- End WOWSlider.com HEAD section -->
 </head>
 <body>
-<divg  class="col-xs-12" style="height:100px;">
+<divg  class="col-xs-12">
   <center>
     <img src="static/img/add.jpg" align="center" style="width:75%;" alt="bk">
   </center>
