--- a/michael/index.html
+++ b/michael/index.html
@@ -36,7 +36,7 @@
         <li><a href="nike.html">Nike</a></li>
         <li><a href="jordan.html">Jordan</a></li>
         <li><a href="adidas.html">Adidas</a></li>
-        <li><a href="Etc..html">DIY.</a></li>
+        <li><a href="Etc..html">DIY</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sign in <span class="caret"></span></a>
           <ul class="dropdown-menu">
