--- a/michael/index.html
+++ b/michael/index.html
@@ -93,7 +93,6 @@
 		      <img src="static/img/nike1.jpg" alt="bk" align="center">
 		      <div class="carousel-caption">
 		      <h6 align="center">Nike Air Trainer 1 Mid QS</h4>
-		      <p>Puerto Rico Release June 14th, 2015 @ Nike.com & Kasina June 14th is celebrated the Puerto Rican Day in New York City. Especially for this day, Nike Sportswear has designed a Nike Air Trainer 1, which will be released as...</p>
 		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/nike-air-trainer-1-mid-qs-puerto-rico-images/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
@@ -102,7 +101,6 @@
 		     <img src="static/img/adidas2.jpg" alt="bk">
 		      <div class="carousel-caption">
 		      <p align="center">UNDFT X ADIDAS ORIGINALS LOS ANGELES</p>
-		      <p>Adidas unveils it's latest lifestyle silhouette with a big bang - the Los Angeles, a updated variant of the classic LA Trainer style is already available at adidas retailers, but something special is about to be released very soon. Adidas Consortium teamed up with LA based...</p>
 		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/undft-x-adidas-originals-los-angeles/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
@@ -110,8 +108,7 @@
 		    <div class="item">
 		      <img src="static/img/nike2.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p align="center">FAMILIA SKATESHOP X NIKE DUNK HIGH PRO SB - BLUE OX IMAGES</p>
-		      <p>Familia Skateshop x Nike Dunk High Pro SB - Blue Ox Release June 27th, 2015 @ Familia Probably only in the US, this Nike Dunk High Pro SB will be released on June 27th, 2015. It's a collaboration from Nike Skateboarding with Minneapolis-based skate shop Familia for...</p>
+		      <p align="center">FAMILIA SKATESHOP X NIKE DUNK HIGH PRO SB - BLUE OX IMAGES</p>>
 		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/familia-skate-shop-x-nike-dunk-high-pro-sb-blue-ox-images/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
@@ -120,7 +117,6 @@
 		      <img src="static/img/vans1.jpg" alt="bk">
 		      <div class="carousel-caption">
 		      <p align="center">VANS X DISNEY "YOUNG AT HEART" COLLECTION 2015</p>
-		      <p>Vans x Disney "Young At Heart" Collection 2015 Released @ Vans.com /SNIPES Not for the first time these two California based giants teamed up to create a capsule collektion. In 2015 they designed shoes, apparel and accessories with the most beloved Disney characters, Mickey Mouse, Minnie...</p>
 		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/vans-x-disney-young-at-heart-collection-2015/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
